[gd_scene load_steps=2 format=3 uid="uid://dxlpeence2pav"]

[ext_resource type="Script" path="res://components/pickable_component.gd" id="1_bca3l"]

[node name="PickableComponent" type="Area2D"]
process_mode = 3
collision_layer = 2147483648
collision_mask = 2147483648
monitoring = false
script = ExtResource("1_bca3l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
